[package]
name = "invariant"
version.workspace = true
edition.workspace = true

[dependencies]
traceable_result.workspace = true
math.workspace = true
decimal.workspace = true
io.workspace = true
contracts.workspace = true
sails-rs.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
gstd.workspace = true
futures = { version = "0.3.30", features = [
  "async-await",
], default-features = false }

[build-dependencies]
io.workspace = true
sails-idl-gen.workspace = true
sails-rs = { workspace = true, features = ["wasm-builder"] }

[dev-dependencies]
tokio.workspace = true
gtest.workspace = true
gclient.workspace = true
sails-rs = { workspace = true, features = ["gtest"] }

[features]
binary-vendor = []
test = ["gstd/debug"]

[workspace]
members = ["xtask", "extended-vft/wasm", "src/wasm"]
package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
# Library dependencies
decimal.path = "calc/decimal"
math.path = "calc/math"
traceable_result.path = "calc/traceable_result"
contracts.path = "src/contracts"

# Local contracts
extended-vft.path = "extended-vft/app"
invariant.path = "."
# Contract dependencies
io.path = "io"

# Gear dependencies
gtest = "=1.7.1"
gclient = "=1.7.1"
gstd = "=1.7.1"
sails-idl-gen = "=0.7.3"
sails-rs = "=0.7.3"
gear-wasm-builder = "=1.7.1"
gear-wasm-instrument = "=1.7.1"
sails-client-gen = "=0.7.3"
vft-service = { git = "https://github.com/gear-foundation/standards" }

# External
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
tokio = { version = "1.36", features = ["full"] }
xshell = "0.2"
anyhow = "1"
log = "*"
env_logger = "*"
primitive-types = { version = "0.13.1", default-features = false }
