[package]
name = "invariant-wasm"
version.workspace = true
edition.workspace = true

[dependencies]
invariant.workspace = true

[build-dependencies]
invariant.workspace = true
sails-idl-gen.workspace = true
sails-rs = { workspace = true, features = ["wasm-builder"] }

[features]
default = []
test = ["invariant/test"]

